Исправлена ошибка с некорректными показателями фандингов